--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@lottiefiles/lottie-js": "^0.4.2",
         "@tailwindcss/forms": "^0.5.7",
         "alpinejs": "^3.13.7"
     }
