--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,9 @@ APP_FAKER_LOCALE=pt_BR
 APP_MAINTENANCE_DRIVER=file
 APP_MAINTENANCE_STORE=database
 
+DASH_LOGIN_URL=https://dash.financialwire.com.br/login
+DASH_REGISTRATION_URL=https://dash.financialwire.com.br/register
+
 BCRYPT_ROUNDS=12
 
 LOG_CHANNEL=stack
