--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dependencies": {
         "@lottiefiles/dotlottie-web": "^0.18.0",
         "@tailwindcss/forms": "^0.5.7",
-        "alpinejs": "^3.13.7"
+        "alpinejs": "^3.13.7",
+        "tailwindcss-animated": "^1.0.1"
     }
 }
